# enhanced-crewai-game-studio

./: .env.example  .gitignore  CLAUDE.md  README.md  agents.py  chunked_crew_runner.py  crew.py  improved_crew.py  index.html  main.py  pixel_snake_game_development_plan.md  requirements.txt  script.js  style.css  tasks.py
crewai_framework/: LICENSE  README.md  __init__.py  agent_factory.py  crew_debugger.py  crewai_validator.py  install.sh  pyproject.toml  requirements.txt  setup.py  task_builder.py
db/: chroma.sqlite3
