[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai-framework"
version = "1.0.0"
description = "A comprehensive framework for building reliable, debuggable CrewAI workflows"
readme = "README.md"
authors = [{name = "CrewAI Framework Team", email = "framework@crewai.dev"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "crewai>=0.177.0",
    "crewai-tools>=0.71.0",
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.0.0",
    "openai>=1.12.0",
    "pydantic>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/crewai-framework"
Documentation = "https://github.com/your-org/crewai-framework/blob/main/README.md"
Repository = "https://github.com/your-org/crewai-framework.git"
Issues = "https://github.com/your-org/crewai-framework/issues"

[project.scripts]
crewai-validate = "crewai_framework.cli:validate_command"
crewai-debug = "crewai_framework.cli:debug_command"

[tool.setuptools.packages.find]
include = ["crewai_framework*"]

[tool.setuptools.package-data]
crewai_framework = ["templates/*.py", "examples/*.py"]